# wagtail-form-plugins

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
conditional_fields/: blocks.py  models.py  wagtail_hooks.py
conditional_fields/locale/en/LC_MESSAGES/: django.po
conditional_fields/locale/fr/LC_MESSAGES/: django.po
conditional_fields/templates/conditional_fields/: field_select.html
demo/: __init__.py  models.py  settings.py  urls.py  wagtail_hooks.py  wsgi.py
demo/management/commands/: init.py
demo/migrations/: 0002_customfileinput_formindexpage_formpage_and_more.py  0002_fileinput_formindexpage_formpage_and_more.py  0002_formindexpage_customformsubmission_formpage.py  0002_formindexpage_formpage_customformsubmission.py  0003_alter_formpage_emails_to_send_and_more.py  0003_customformsubmission_email.py
demo/static/css/: form.css
demo/templates/: 404.html
demo/templates/demo/: base.html  form_index_page.html  form_page.html  form_page_landing.html
demo/templates/example/: form_page.html  form_page_landing.html
demo/templates/wagtail_form_plugins/: form_validation.html
demo/tests/: __init__.py  base.feature  email.feature  environment.py  form.feature  label.feature  validation.feature
demo/tests/steps/: __init__.py  base.py  base_then.py  base_when.py  common.py  email.py  email_then.py  form.py  form_given.py  form_then.py  label.py  page.py  page_then.py  validation.py
example/: models.py  settings.py  urls.py  wagtail_hooks.py
example/management/commands/: init.py
example/migrations/: 0001_initial.py  0002_fileinput_formindexpage_formpage_and_more.py
example/static/css/: example.css  form_admin.css
example/templates/: 404.html
example/templates/example/: base.html  form_already_submitted.html  form_index_page.html  form_page.html  form_page_landing.html
example/templates/home/: home_page.html
forms/: blocks.py  forms.py  models.py  wagtail_hooks.py
streamfield_forms/: blocks.py  models.py
wagtail_form_mixins/: blocks.py  forms.py  hooks.py  models.py  views.py
wagtail_form_mixins/actions/: blocks.py  models.py  wagtail_hooks.py
wagtail_form_mixins/base/: models.py
wagtail_form_mixins/conditional_fields/: blocks.py  models.py  wagtail_hooks.py
wagtail_form_mixins/conditions/: blocks.py  wagtail_hooks.py
wagtail_form_mixins/datepickers/: forms.py
wagtail_form_mixins/emails/: blocks.py  models.py  wagtail_hooks.py
wagtail_form_mixins/file_input/: blocks.py  forms.py  models.py  views.py
wagtail_form_mixins/named/: models.py
wagtail_form_mixins/named_form/: models.py
wagtail_form_mixins/streamfield/: blocks.py  forms.py  models.py
wagtail_form_mixins/templating/: blocks.py  formatter.py  models.py  wagtail_hooks.py
wagtail_form_plugins/: blocks.py  forms.py  hooks.py  models.py  panels.py  urls.py  utils.py  views.py
wagtail_form_plugins/base/: __init__.py  blocks.py  forms.py  models.py
wagtail_form_plugins/conditional_fields/: __init__.py  blocks.py  dicts.py  form_field.py  forms.py  hooks.py  models.py  utils.py  views.py
wagtail_form_plugins/datepickers/: __init__.py  forms.py
wagtail_form_plugins/editable/: __init__.py  models.py
wagtail_form_plugins/emails/: __init__.py  blocks.py  hooks.py  models.py  utils.py
wagtail_form_plugins/file_input/: __init__.py  blocks.py  forms.py  models.py  views.py
wagtail_form_plugins/indexed_results/: __init__.py  models.py
wagtail_form_plugins/label/: __init__.py  blocks.py  forms.py  models.py  views.py
wagtail_form_plugins/named_form/: __init__.py  models.py  views.py
wagtail_form_plugins/nav_buttons/: __init__.py  hooks.py  models.py  views.py
wagtail_form_plugins/plugins/: __init__.py
wagtail_form_plugins/plugins/conditional_fields/: __init__.py  blocks.py  dicts.py  form_field.py  forms.py  models.py  views.py
wagtail_form_plugins/plugins/editable/: __init__.py  models.py  views.py
wagtail_form_plugins/plugins/emails/: __init__.py  blocks.py  models.py
wagtail_form_plugins/plugins/file_input/: __init__.py  forms.py  models.py  views.py
wagtail_form_plugins/plugins/indexed_results/: models.py
wagtail_form_plugins/plugins/label/: __init__.py  forms.py  views.py
wagtail_form_plugins/plugins/nav_buttons/: __init__.py  views.py
wagtail_form_plugins/plugins/templating/: __init__.py  blocks.py  dicts.py  formatter.py  forms.py  models.py
wagtail_form_plugins/plugins/token_validation/: models.py
wagtail_form_plugins/streamfield/: __init__.py  blocks.py  dicts.py  form_field.py  forms.py  hooks.py  models.py  plugin.py  utils.py  views.py
wagtail_form_plugins/templates/wagtail_form_plugins/: form_validation.html
wagtail_form_plugins/templates/wagtailforms/: list_submissions.html
wagtail_form_plugins/templating/: __init__.py  blocks.py  formatter.py  forms.py  hooks.py  models.py
wagtail_form_plugins/token_validation/: __init__.py  models.py  panels.py  urls.py  views.py
wagtail_laas_forms/: blocks.py  forms.py  models.py
(+57 files in other folders)
