[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ty>=0.0.1a20",
  "ruff>=0.6",
  "pre-commit>=4.2.0",
  "pyright>=1.1.405",
  "django-stubs>=5.2.5"
]

[project]
name = "wagtail_form_plugins"
version = "0.4.3"
description = "A set of plugins used to customize and improve the Wagtail form builder in a modular way."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["wagtail", "form", "plugins"]
classifiers = ["Framework :: Wagtail"]
authors = [
  {name = "Nathanaël Jourdane", email = "njourdane@laas.fr"}
]
dependencies = [
  "django>=5.2.6",
  "wagtail>=7.0"
]

[project.optional-dependencies]
demo = [
  "django-bootstrap5>=25.1"
]

[project.urls]
homepage = "https://pypi.org/project/wagtail_form_plugins"
source = "https://github.com/laas/wagtail-form-plugins"
issues = "https://github.com/laas/wagtail-form-plugins/issues"

[tool.django-stubs]
django_settings_module = "demo.settings"

[tool.pyright]
exclude = ["demo/migrations/*"]

[tool.ruff]
extend-exclude = ["migrations"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "ANN001"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "wagtail", "first-party", "local-folder", "third-party"]
sections.django = ["django"]
sections.wagtail = ["wagtail"]

[tool.uv.build-backend]
module-root = ""
