[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ty",
  "ruff",
  "pre-commit",
  "django-stubs",
  "poethepoet",
  "behave",
  "behave-django",
  "beautifulsoup4>=4.14.3"
]

[project]
name = "wagtail-form-plugins"
version = "0.5.0"
description = "A set of plugins used to customize and improve the Wagtail form builder in a modular way."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["wagtail", "form", "plugins"]
classifiers = ["Framework :: Wagtail"]
authors = [
  {name = "Nathanaël Jourdane", email = "njourdane@laas.fr"}
]
dependencies = [
  "django",
  "wagtail"
]

[project.optional-dependencies]
demo = [
  "django-bootstrap5",
  "wagtail-autocomplete"
]

[project.urls]
homepage = "https://pypi.org/project/wagtail_form_plugins"
source = "https://github.com/laas/wagtail-form-plugins"
issues = "https://github.com/laas/wagtail-form-plugins/issues"

[tool.behave]
paths = ["demo/tests"]
capture = true

[tool.django-stubs]
django_settings_module = "demo.settings"

[tool.poe.tasks]
behave = "uv run python manage.py behave --simple --force-color"
biome-check = "biome check --line-width=100 */static/"
django-check = "uv run python manage.py check"
ruff-check = "uv run ruff check"
ruff-format = "uv run ruff format"
ty-check = "uv run ty check --color always"
uv-dry-sync = "uv sync --extra demo --dry-run"

[tool.poe.tasks.check]
parallel = ["biome-check", "django-check", "ruff-check", "ruff-format", "ty-check", "uv-dry-sync"]
ignore_fail = true

[tool.poe.tasks.fix]
parallel = ["biome-check --write", "ruff-check --fix"]
ignore_fail = true

[tool.ruff]
extend-exclude = ["migrations"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "D106", "D107", "ANN002", "ANN003", "ANN204"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "wagtail", "first-party", "local-folder", "third-party"]
sections.django = ["django"]
sections.wagtail = ["wagtail"]

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]
# behave = { path = "../behave", editable = true }
# behave = {git = "https://github.com/behave/behave.git", rev = "d659aab"}
# behave = {git = "https://github.com/njourdane/behave.git", branch = "fix-stdout-pretty"}
behave = {git = "https://github.com/vijaymodha/behave.git", branch = "fix-stub"}
